tests/NormalTests/paczka1/small_fuzzy/78328465.err
Error in line 5: Yf7IbwUxb S425 65,9
Error in line 6: Yf7IbwUxb S755 47,9
Error in line 7: A672 A672 11,4
